# standard_assignment2

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.dev  Doxyfile  README.md  todo.txt
config/: config.yaml
debug/: debug.py
script/: check_perf.sh  cmake_exe.sh  require_pkg_install.sh  require_pkg_list.sh
src/: main.cpp
src/include/camera/: camera_capture_thread.hpp  v4l2_capture.hpp
src/include/camera_capture_thread/: camera_capture_thread.hpp
src/include/image_processor/: image_processor.hpp
src/include/logger/: logger.hpp
src/include/network/: udp_sender.hpp  udp_sender_thread.hpp
src/include/read_config/: read_yaml.hpp
src/lib/camera/: camera_capture_thread.cpp  v4l2_capture.cpp
src/lib/camera_capture_thread/: camera_capture_thread.cpp
src/lib/image_processor/: image_processor.cpp
src/lib/network/: udp_sender.cpp  udp_sender_thread.cpp
src/lib/read_config/: read_yaml.cpp
